最后更新，签名APK

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">逗酷天气</string>
+    <string name="app_name">逗渣天气</string>
+    <string name="welcome">欢迎使用逗渣天气==></string>
 </resources>
